Added jquery and deployment files

--- a/public/index_style.css
+++ b/public/index_style.css
@@ -17,6 +17,10 @@ h1 {
 	margin-left: 10%;
 	margin-top: 78%;
 }
+h1, p, h2 {
+	position: relative!important;
+	left: -900px;
+}
 /*NAV LINK CSS*/
 .nav-element {
 	color: #393939;
