--- a/views/projects.erb
+++ b/views/projects.erb
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function() {
-		$('#projects-background').delay(1500).slideUp('slow');
+		$('#projects-background').delay(1000).slideUp('slow')
 	})
 	</script>
 </head>
