trying new things

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="./public/index_style.css">
-	<link rel="stylesheet" type="text/css" href="./public/bootstrap/css/bootstrap.css">
-	<script type="text/javascript" src=".public/bootstrap/jquery.min.js"></script>
-	<script type="text/javascript" src=".public/jquery-ui.js"></script>
-	<script type="text/javascript" src=".public/bootstrap/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="index_style.css">
+	<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.css">
+	<script type="text/javascript" src="/bootstrap/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery-ui.js"></script>
+	<script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function() {
 		//put elements into an array
