--- a/views/projects.erb
+++ b/views/projects.erb
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Voice-Chat</title>
 	<link rel="stylesheet" type="text/css" href="projects_style.css">
-	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
-	<script type="text/javascript" src="bootstrap/jquery.min.js"></script>
-	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="bootstrap.css">
+	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="bootstrap.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function() {
 		$('#projects-background').delay(1000).slideUp('slow')
