--- a/views/projects.erb
+++ b/views/projects.erb
@@ -5,7 +5,7 @@
 	<title>Voice-Chat</title>
 	<link rel="stylesheet" type="text/css" href="projects_style.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
-	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="bootstrap/jquery.min.js"></script>
 	<script type="text/javascript" src="bootstrap.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function() {
