--- a/views/in_progress.erb
+++ b/views/in_progress.erb
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="in_progress_style.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
-	<script type="text/javascript" src="bootstrap/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>	
 </head>
 <body>
