--- a/views/music.erb
+++ b/views/music.erb
@@ -59,10 +59,16 @@
 <div class='at_top' id="header">
 	<h1>Works in progress...</h1>
 </div>
-<div class="music_background" hidden>
-	<h1 class="banner">Musical Endeavours</h1>
-</div>
 <div class="container">
+</div>
+<div class="row front">
+	<h1>So what if I play music?</h1>
+	<ul>
+		<li>A scale in music is a preordained set of notes that you can play, just like using a specific coding language.</li>
+		<li>Semantic code structure looks very similar to written music, with organized lines, stacks notes that make up a chord, and stacks of code that make up a function. These functions can then be used to give your code power, just as chords can give music more power.</li>
+		<li>Writing code requires strict adherence to the accepted standards, as does writing music. If you deviate from a given key or scale, it will be harder for others to make sense of the music.</li>
+	</ul>
+	<h2>The passion that I bring to music is the same passion that I bring to coding...</h2>
 </div>
 <div class="row musical_piece la_campanella">
 	<div class="holder">
@@ -70,6 +76,7 @@
 		<h4 class="composition_name">Etude No. 3 in G# minor "La Campanella"</h4>
 		<p>Latin for "little bell", La Campanella is a piano arrangement of the melody from the last movement of Paganini's second Violin Concerto. It studies right hand jumping between large intervals. Additional technical difficulties include trills with the fourth and fifth fingers and large jumps in the left hand.</p>
 		<p>I began learning this piece after watching the video linked in the button below. It is spectacular and very catchy, as most of Paganini's melodies are. It is defintely the most difficult piece I will learn up to this point.</p>
+		<p><b>Click to hear what this piece sounds like!</b></p>
 		<div hidden>
 			<iframe width="845" height="480" src="https://www.youtube.com/embed/vwc-nmyPm4I?controls=1&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 		</div>
@@ -82,6 +89,7 @@
 		<h4 class="composition_name">Etude No. 3 in Db major "Un Sospiro"</h4>
 		<p>Un Sospiro is an etude that studies the crossing of the hands. Its name is Italian for "A sigh". It is also a study in the way that hands should affect the melody, with its many accentuations and phrasing with alternate hands. The piece is quite complex, even utilizing three staves at times. It is widely regarded as one of the most beautiful piano pieces ever composed.</p>
 		<p>Not having played it since my recital several years ago, I am trying to bring it back up to snuff and fix some of the rushed phrasing and missed notes that were present in my recital.</p>
+		<p><b>Click to hear what this piece sounds like!</b></p>
 		<div hidden>
 			<iframe width="845" height="480" src="https://www.youtube.com/embed/0_FCTTmr8JM?controls=1&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 		</div>
@@ -93,6 +101,7 @@
 		<h3 class="composition_title">Maurice Ravel - Jeux d'eau</h3>
 		<p>Dedicated to Gabriel Faure, Ravel composed this piece in 1901 under the tutelage of Faure. It is a late-romantic and impressionistic work using the whole-tone scale. It is written in sonata form, though it does not conform to the traditional sonata tonal form. It is very technically challenging and requires suppleness of fingers in order to perform the dense orchestration while bringing out a properly phrased melody. Its name is french for "Water play", or "Water fountain". It was written to convey the sounds of water splashing or being sprayed.</p>
 		<p>This amazing impressionistic masterpiece is one of my all time favorites. It is unbelievable how Ravel actually makes the piano emulate the sounds of water. Also extremely difficult, I run into issues with my hands not being quite large enough to play some notes simultaneously.</p>
+		<p><b>Click to hear what this piece sounds like!</b></p>
 		<div hidden>
 			<iframe width="845" height="480" src="https://www.youtube.com/embed/J_36x1_LKgg?controls=1&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 		</div>
@@ -154,13 +163,13 @@
 <div class="row recital_piece">
 	<div class="holder">
 		<h3 class="recital_title">Recital Part I</h3>
-		<iframe src="https://player.vimeo.com/video/143323966" width="880" height="470" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+		<iframe src="https://player.vimeo.com/video/143323966" width="100%" height="480px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
 	</div>
 </div>
 <div class="row recital_piece">
 	<div class="holder">
 		<h3 class="recital_title">Recital Part II</h3>
-		<iframe src="https://player.vimeo.com/video/143431604" width="880" height="470" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+		<iframe src="https://player.vimeo.com/video/143431604" width="100%" height="480px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
 	</div>
 </div>
 </body>
