--- a/static/index_style.css
+++ b/static/index_style.css
@@ -129,8 +129,11 @@ p, li {
 	display: inline-block;
 }
 /* MODAL STYLING */
-.modal_main {
+.modal-body img {
 	width: 100%;
+	margin: 10px 0px;
+	z-index: 0;
+	position: relative;
 }
 .btn-primary {
 	border-radius: 0px!important;
@@ -140,4 +143,27 @@ p, li {
 }
 	.btn-primary:hover {
 		background-color: #393939!important;
+	}
+	.modal-body {
+		max-height: 50em!important;
+		overflow-y: scroll;
+		overflow-x: hidden;
+	}
+	.modal-title {
+		font-family: 'Inconsolata'!important;
+		font-size: 2em;
+	}
+	.modal-header {
+	    border-bottom: 1px solid #e5e5e5;
+		box-shadow: 0px 3px 8px black;
+	}
+	.modal-footer {
+		box-shadow: 0px -3px 8px black;
+
+	}
+	.modal-body p {
+		padding: 5px 20px;
+	}
+	.modal-dialog {
+		width: 75%!important;
 	}
