--- a/static/index_style.css
+++ b/static/index_style.css
@@ -135,6 +135,9 @@ p, li {
 	z-index: 0;
 	position: relative;
 }
+.modal-body ul {
+	list-style-type: none;
+}
 .btn-primary {
 	border-radius: 0px!important;
 	background-color: #6E6E6E!important;
